feat: Implement calendar view for table details, introducing a new view base component and shared calendar component.

--- a/client/src/app/features/base/base.component.html
+++ b/client/src/app/features/base/base.component.html
@@ -6,8 +6,8 @@
   </div>
   <div class="base-table-detail w-full h-full">
     <p-tabs value="0" class="w-full" [class.h-full]="hasSelectedTable">
-      <p-tablist>
-        <div class="flex items-center p-1">
+      <p-tablist class="min-h-[48px]">
+        <div class="flex items-center p-1 min-h-[47px]">
           <p-button
             [icon]="`icon ${sidebarVisible() ? 'icon-panel-left-close' : 'icon-panel-right-close'}`"
             [text]="true"
