--- a/client/src/app/shared/spreadsheet/spreadsheet.component.html
+++ b/client/src/app/shared/spreadsheet/spreadsheet.component.html
@@ -39,8 +39,8 @@
     [style.paddingRight.px]="tableService.config().sideSpacing"
   >
     <div class="flex flex-wrap w-full gap-2">
-      <div class="flex">
-        <ng-container *ngTemplateOutlet="toolbarTemplate()"></ng-container>
+      <div class="flex items-start">
+        <ng-container *ngTemplateOutlet="toolbarTmpl()"></ng-container>
       </div>
       <div class="flex flex-wrap gap-2 flex-1 justify-end min-w-[400px]">
         @if ($any(tableService.config().toolbar).customize) {
