--- a/client/src/app/features/base/table/pages/table-detail/views/calendar-view/calendar-view.component.html
+++ b/client/src/app/features/base/table/pages/table-detail/views/calendar-view/calendar-view.component.html
@@ -49,7 +49,11 @@
     <div class="flex flex-wrap gap-2">
       <p-button label="Insert" icon="icon icon-plus" (click)="addNewRecord()" />
       <p-button
-        label="Choose Fields"
+        [label]="
+          selectedStartField && selectedEndField
+            ? selectedStartField + ' - ' + selectedEndField
+            : 'Choose fields'
+        "
         icon="icon icon-calendar"
         severity="secondary"
         [text]="true"
