feat: Format AutoDate fields with a pipe and refactor the date editor to manage Date objects for UI and ISO strings for data.

--- a/client/src/app/shared/field-system/editors/date/editor.component.html
+++ b/client/src/app/shared/field-system/editors/date/editor.component.html
@@ -27,7 +27,8 @@
     [pAutoFocus]="autoFocus()"
     [readonlyInput]="viewOnly()"
     [disabled]="viewOnly()"
-    [(ngModel)]="data"
+    [ngModel]="date()"
+    (ngModelChange)="onDateChange($event)"
     [showTime]="true"
     [showClear]="true"
     [showIcon]="true"
