style: Disable horizontal overscroll globally.

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -21,6 +21,11 @@ html {
   line-height: normal;
 }
 
+html,
+body {
+  overscroll-behavior-x: none !important;
+}
+
 :focus,
 :focus-visible {
   outline: none;
