--- a/client/src/app/shared/spreadsheet/components/field-cell/geo-point/cell.component.html
+++ b/client/src/app/shared/spreadsheet/components/field-cell/geo-point/cell.component.html
@@ -8,7 +8,7 @@
     @if (selecting) {
       <map-picker-drawer
         [(visible)]="visibleMapPicker"
-        [loc]="loc"
+        [location]="location"
         (onSave)="onSaveNewLocation($event)"
       />
       <div
