--- a/client/src/app/shared/calendar/calendar.component.html
+++ b/client/src/app/shared/calendar/calendar.component.html
@@ -1,5 +1,5 @@
-<div class="px-[20px] py-[16px]">
-  <div class="flex flex-wrap justify-between gap-2">
+<div class="flex flex-col gap-4 w-full h-full">
+  <div class="flex flex-wrap justify-between gap-2" [class]="toolbarStyleClass()">
     <div class="flex">
       <div class="flex items-start">
         <ng-container *ngTemplateOutlet="toolbarTmpl()"></ng-container>
@@ -40,7 +40,7 @@
       </div>
     </div>
   </div>
-</div>
-<div class="px-[20px] pb-[16px]">
-  <full-calendar #fullCalendar [options]="calendarOptions" [events]="events()" />
+  <div class="flex-1" [class]="contentStyleClass()">
+    <full-calendar #fullCalendar [options]="calendarOptions" [events]="events()" />
+  </div>
 </div>
