refactor: Update geo-point formatting and integrate point format pipe in cell component

--- a/client/src/app/shared/spreadsheet/components/field-cell/geo-point/cell.component.html
+++ b/client/src/app/shared/spreadsheet/components/field-cell/geo-point/cell.component.html
@@ -2,7 +2,7 @@
   <div class="flex items-start justify-between w-full gap-1">
     @if (data !== undefined && data !== null) {
       <div class="field-cell__text-content">
-        {{ pointStr }}
+        {{ data | pointFormat }}
       </div>
     }
     @if (selecting) {
@@ -24,7 +24,7 @@
 } @else {
   <input-box
     type="text"
-    [content]="pointStr"
+    [content]="data | pointFormat"
     (edited)="onInputBoxEdited($event)"
     (input)="onInputBoxInput($event)"
     (focus)="onInputBoxFocus($event)"
