refactor: Rename column-related properties for clarity and consistency in DataView and ViewBase components

--- a/client/src/app/features/base/table/pages/table-detail/views/data-view/data-view.component.html
+++ b/client/src/app/features/base/table/pages/table-detail/views/data-view/data-view.component.html
@@ -25,9 +25,9 @@
 } @else {
   <spreadsheet
     #spreadsheet
-    [config]="config()"
-    [columns]="columns()"
-    [rows]="rows()"
+    [config]="ssConfig()"
+    [columns]="ssColumns()"
+    [rows]="ssRows()"
     (action)="onTableAction($event)"
     (columnAction)="onColumnAction($event)"
     (rowAction)="onRowAction($event)"
