feat: Add record title tooltips to map markers and configure Nominatim search URL in environment.

--- a/client/src/app/features/base/table/pages/table-detail/views/map-view/map-view.component.html
+++ b/client/src/app/features/base/table/pages/table-detail/views/map-view/map-view.component.html
@@ -24,7 +24,7 @@
   </div>
 </p-popover>
 
-<open-map [locations]="locations()" [zoom]="5" toolbarStyleClass="pt-[16px] px-[20px]">
+<open-map [locations]="locations()" toolbarStyleClass="pt-[16px] px-[20px]">
   <ng-template #toolbar>
     <ng-content></ng-content>
     <div class="flex flex-wrap gap-2">
