--- a/client/src/app/shared/spreadsheet/components/field-cell/select/cell.component.html
+++ b/client/src/app/shared/spreadsheet/components/field-cell/select/cell.component.html
@@ -1,7 +1,9 @@
 <div class="flex items-start justify-between w-full gap-1">
   @if (data !== undefined && data !== null) {
     <div class="field-cell__block-content">
-      <p-tag severity="secondary" [value]="data"></p-tag>
+      <p-tag severity="secondary">
+        <p class="whitespace-nowrap">{{ data }}</p>
+      </p-tag>
     </div>
   }
   @if (selecting) {
