feat: Enhance map and calendar views with split toolbar templates and dedicated record loading indicators.

--- a/client/src/app/features/base/table/pages/table-detail/views/data-view/data-view.component.html
+++ b/client/src/app/features/base/table/pages/table-detail/views/data-view/data-view.component.html
@@ -1,4 +1,4 @@
-@if (isLoading()) {
+@if (isColumnsLoading()) {
   <div class="flex gap-2 justify-between px-[20px] py-[16px]">
     <p-skeleton width="100px" height="33px" />
     <p-divider layout="vertical" class="scale-80" />
