--- a/client/src/app/features/base/table/pages/table-detail/views/map-view/map-view.component.html
+++ b/client/src/app/features/base/table/pages/table-detail/views/map-view/map-view.component.html
@@ -25,7 +25,7 @@
 </p-popover>
 
 <open-map [locations]="locations()" toolbarStyleClass="pt-[16px] px-[20px]">
-  <ng-template #toolbar>
+  <ng-template #leftToolbar>
     <ng-content></ng-content>
     <div class="flex flex-wrap gap-2">
       <p-button label="Insert" icon="icon icon-plus" (click)="addNewRecord()" />
@@ -37,11 +37,22 @@
           </span>
         </ng-template>
       </p-button>
+    </div>
+  </ng-template>
+
+  <ng-template #rightToolbar>
+    <div class="flex items-center">
+      @if (isRecordsLoading()) {
+        <div class="mt-1 mr-4">
+          <p-progress-spinner class="w-4! h-4!" strokeWidth="8" />
+        </div>
+      }
       <filter-option
         [fields]="fields()"
         [items]="records()"
         (onFilter)="onRecordsFiltered($event)"
       />
+      <p-divider layout="vertical" class="scale-80" />
     </div>
   </ng-template>
 </open-map>
