--- a/client/src/app/shared/open-map/open-map.component.html
+++ b/client/src/app/shared/open-map/open-map.component.html
@@ -3,31 +3,35 @@
     <div class="flex">
       <div class="flex items-start">
         <ng-container *ngTemplateOutlet="toolbarTmpl()"></ng-container>
+        <ng-container *ngTemplateOutlet="leftToolbarTmpl()"></ng-container>
       </div>
     </div>
-    <div class="flex gap-2">
-      <p-button
-        icon="icon icon-locate-fixed"
-        severity="secondary"
-        [outlined]="true"
-        (click)="getCurrentLocation()"
-        pTooltip="Current location"
-      />
-      <p-inputgroup class="w-3xs max-w-3xs">
-        <p-iconfield>
-          <p-inputicon class="icon icon-search !z-2" />
-          <p-autocomplete
-            [suggestions]="suggestions()"
-            (completeMethod)="searchAddress($event)"
-            (onSelect)="onSelectAddress($event)"
-            [delay]="500"
-            [panelStyle]="{ 'max-width': '400px', width: '100%' }"
-            optionLabel="display_name"
-            placeholder="Search location"
-            appendTo="body"
-          />
-        </p-iconfield>
-      </p-inputgroup>
+    <div class="flex">
+      <ng-container *ngTemplateOutlet="rightToolbarTmpl()"></ng-container>
+      <div class="flex gap-2">
+        <p-button
+          icon="icon icon-locate-fixed"
+          severity="secondary"
+          [outlined]="true"
+          (click)="getCurrentLocation()"
+          pTooltip="Current location"
+        />
+        <p-inputgroup class="w-3xs max-w-3xs">
+          <p-iconfield>
+            <p-inputicon class="icon icon-search !z-2" />
+            <p-autocomplete
+              [suggestions]="suggestions()"
+              (completeMethod)="searchAddress($event)"
+              (onSelect)="onSelectAddress($event)"
+              [delay]="500"
+              [panelStyle]="{ 'max-width': '400px', width: '100%' }"
+              optionLabel="display_name"
+              placeholder="Search location"
+              appendTo="body"
+            />
+          </p-iconfield>
+        </p-inputgroup>
+      </div>
     </div>
   </div>
   <div class="flex-1" [class]="contentStyleClass()">
