feat: Add marker click event handling to map view component

--- a/client/src/app/features/base/table/pages/table-detail/views/map-view/map-view.component.html
+++ b/client/src/app/features/base/table/pages/table-detail/views/map-view/map-view.component.html
@@ -24,7 +24,7 @@
   </div>
 </p-popover>
 
-<open-map [locations]="locations()" toolbarStyleClass="pt-[16px] px-[20px]">
+<open-map [locations]="locations()" (onMarkerClick)="onMarkerClick($event)" toolbarStyleClass="pt-[16px] px-[20px]">
   <ng-template #leftToolbar>
     <ng-content></ng-content>
     <div class="flex flex-wrap gap-2">
