feat: Refactor table detail views to utilize display mode templates and improve loading indicators

--- a/client/src/app/features/base/table/pages/table-detail/table-detail.component.html
+++ b/client/src/app/features/base/table/pages/table-detail/table-detail.component.html
@@ -44,28 +44,25 @@
   @case ('data-view') {
     <data-view
       #view
+      [displayModeTmpl]="displayModeTmpl"
       (onUpdateColumn)="onUpdateColumn($event)"
       (onUpdateRecord)="onUpdateRecord($event)"
-    >
-      <ng-container *ngTemplateOutlet="displayModeTmpl"></ng-container>
-    </data-view>
+    />
   }
   @case ('calendar-view') {
     <calendar-view
       #view
+      [displayModeTmpl]="displayModeTmpl"
       (onUpdateColumn)="onUpdateColumn($event)"
       (onUpdateRecord)="onUpdateRecord($event)"
-    >
-      <ng-container *ngTemplateOutlet="displayModeTmpl"></ng-container>
-    </calendar-view>
+    />
   }
   @case ('map-view') {
     <map-view
       #view
+      [displayModeTmpl]="displayModeTmpl"
       (onUpdateColumn)="onUpdateColumn($event)"
       (onUpdateRecord)="onUpdateRecord($event)"
-    >
-      <ng-container *ngTemplateOutlet="displayModeTmpl"></ng-container>
-    </map-view>
+    />
   }
 }
