--- a/client/src/app/features/base/table/pages/table-detail/views/calendar-view/calendar-view.component.html
+++ b/client/src/app/features/base/table/pages/table-detail/views/calendar-view/calendar-view.component.html
@@ -48,21 +48,30 @@
     (onChangeDateRange)="onChangeDateRange($event)"
   >
     <ng-template #leftToolbar>
-      <ng-content></ng-content>
       <div class="flex flex-wrap gap-2">
-        <p-button label="Insert" icon="icon icon-plus" (click)="addNewRecord()" />
-        <p-button severity="secondary" [text]="true" (click)="popover.show($event)">
-          <ng-template pTemplate="content">
-            <i class="icon icon-calendar"></i>
-            <span class="p-button-label truncate max-w-3xs">
-              {{
-                selectedStartField && selectedEndField
-                  ? selectedStartField + ' - ' + selectedEndField
-                  : 'Select Date Fields'
-              }}
-            </span>
-          </ng-template>
-        </p-button>
+        <div class="flex items-start">
+          <ng-template [ngTemplateOutlet]="displayModeTmpl()"></ng-template>
+          <div class="flex gap-2">
+            @if (isColumnsLoading()) {
+              <p-skeleton width="100px" height="33px" />
+              <p-skeleton width="165px" height="33px" />
+            } @else {
+              <p-button label="Insert" icon="icon icon-plus" (click)="addNewRecord()" />
+              <p-button severity="secondary" [text]="true" (click)="popover.show($event)">
+                <ng-template pTemplate="content">
+                  <i class="icon icon-calendar"></i>
+                  <span class="p-button-label truncate max-w-3xs">
+                    {{
+                      selectedStartField && selectedEndField
+                        ? selectedStartField + ' - ' + selectedEndField
+                        : 'Select Date Fields'
+                    }}
+                  </span>
+                </ng-template>
+              </p-button>
+            }
+          </div>
+        </div>
       </div>
     </ng-template>
     <ng-template #rightToolbar>
@@ -72,11 +81,15 @@
             <p-progress-spinner class="w-4! h-4!" strokeWidth="8" />
           </div>
         }
-        <filter-option
-          [fields]="fields()"
-          [items]="records()"
-          (onFilter)="onRecordsFiltered($event)"
-        />
+        @if (isColumnsLoading()) {
+          <p-skeleton width="90px" height="33px" />
+        } @else {
+          <filter-option
+            [fields]="fields()"
+            [items]="records()"
+            (onFilter)="onRecordsFiltered($event)"
+          />
+        }
         <p-divider layout="vertical" class="scale-80" />
       </div>
     </ng-template>
