--- a/client/src/app/features/base/table/pages/table-detail/views/data-view/data-view.component.html
+++ b/client/src/app/features/base/table/pages/table-detail/views/data-view/data-view.component.html
@@ -1,8 +1,9 @@
 @if (isColumnsLoading()) {
   <div class="flex gap-2 justify-between px-[20px] py-[16px]">
-    <p-skeleton width="100px" height="33px" />
-    <p-divider layout="vertical" class="scale-80" />
-    <p-skeleton width="100px" height="33px" />
+    <div class="flex items-start">
+      <ng-template [ngTemplateOutlet]="displayModeTmpl()"></ng-template>
+      <p-skeleton width="100px" height="33px" />
+    </div>
     <div class="flex flex-wrap gap-2 flex-1 justify-end min-w-[400px]">
       <p-skeleton width="90px" height="33px" />
       <p-skeleton width="90px" height="33px" />
@@ -34,7 +35,7 @@
     (cellAction)="onCellAction($event)"
   >
     <ng-template #toolbar>
-      <ng-content></ng-content>
+      <ng-template [ngTemplateOutlet]="displayModeTmpl()"></ng-template>
       <p-splitbutton
         label="Insert"
         icon="icon icon-plus"
