feat: Refactor table service to use activeTable and selectedTables, updating components to reflect new state management

--- a/client/src/app/features/base/table/pages/table-detail/table-detail.component.html
+++ b/client/src/app/features/base/table/pages/table-detail/table-detail.component.html
@@ -1,6 +1,6 @@
 <column-editor-drawer
   [(visible)]="visibleColumnEditor"
-  [table]="tblService.selectedTable()"
+  [table]="tblService.activeTable()"
   [column]="updatedColumn"
   [mode]="updatedColumnMode"
   (onSave)="onColumnSave($any($event))"
